<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="194dp"
        app:layout_constraintBottom_toBottomOf="@+id/resultat"
        app:layout_constraintEnd_toEndOf="@+id/resultat"
        app:layout_constraintStart_toStartOf="@+id/resultat"
        app:layout_constraintTop_toTopOf="@+id/resultat"
        android:background="@color/black"/>


    <TextView
        android:id="@+id/resultat"
        android:layout_width="346dp"
        android:layout_height="190dp"
        android:text="0"
        android:textSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        android:gravity="bottom|right"
        android:background="@color/white"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:layout_marginTop="448dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/calcGrid"
        android:entries="@array/spinnerItems"/>


    <GridLayout
        android:id="@+id/calcGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/btnC"
            android:id="@+id/btnC"
            android:onClick="addNbr"/>

        <Button
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/btnD"
            android:id="@+id/btnD"
            android:onClick="addNbr" />

        <Button
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btnE"
            android:id="@+id/btnE"
            android:onClick="addNbr" />

        <Button
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/btnF"
            android:id="@+id/btnF"
            android:onClick="addNbr" />

        <Button
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/btn8"
            android:id="@+id/btn8"
            android:onClick="addNbr" />

        <Button
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/btn9"
            android:id="@+id/btn9"
            android:onClick="addNbr" />

        <Button
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btnA"
            android:id="@+id/btnA"
            android:onClick="addNbr" />

        <Button
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/btnB"
            android:id="@+id/btnB"
            android:onClick="addNbr" />


        <Button
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/btn4"
            android:id="@+id/btn4"
            android:onClick="addNbr" />

        <Button
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/btn5"
            android:id="@+id/btn5"
            android:onClick="addNbr" />

        <Button
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btn6"
            android:id="@+id/btn6"
            android:onClick="addNbr" />

        <Button
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/btn7"
            android:id="@+id/btn7"
            android:onClick="addNbr" />

        <Button
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/btn0"
            android:id="@+id/btn0"
            android:onClick="addNbr" />

        <Button
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/btn1"
            android:id="@+id/btn1"
            android:onClick="addNbr" />

        <Button
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/btn2"
            android:id="@+id/btn2"
            android:onClick="addNbr" />

        <Button
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/btn3"
            android:id="@+id/btn3"
            android:onClick="addNbr" />

        <!--Button
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/btnplus"
            android:id="@+id/btnplus"/-->

        <!--Button
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/btnequal"
            android:id="@+id/btnequal" /-->

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>